# k_anonymization

./: LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docpage.yml
csec112/: README.md  csec112_adult_1_create_sample.ipynb  csec112_adult_2_evaluate.ipynb  csec112_adult_3_plots.ipynb  csec112_london2002_1_create_sample.ipynb  csec112_london2002_2_evaluate.ipynb  csec112_london2002_3_plots.ipynb  csec112_london2002_4_plots_compare_datasets.ipynb
csec112/Incognito/k_anonymization/: __init__.py
csec112/Incognito/src/: utils.py
csec112/k_anonymization/algorithms/: __init__.py
csec112/k_anonymization/datasets/: __init__.py
csec112/k_anonymization/evaluation/: metrics.py
docs/: _config.yml  _toc.yml  about.md  api.rst  dataset.rst  frame.rst  index.md  k_anonymization  markdown.md  notebooks.ipynb  references.bib  test.md
docs/_static/: page.css
docs/_templates/autosummary/: class.rst  module.rst
docs/algorithms/: datafly.ipynb  implemented.md  k_anonymization  kmember.ipynb  oka.ipynb
docs/api/: api.rst
docs/api/_autosummary/: k_anonymization.algorithms.full_generalization.rst  (+22 more)
docs/datasets/: guide.ipynb  implemented.md  intro.ipynb  open_datasets.md  test_datasets.md
k_anonymization/algorithms/: __init__.py  type.py  utils.py
k_anonymization/datasets/: __init__.py  type.py
k_anonymization/evaluation/: metrics.py  utils.py
k_anonymization/utils/: data_table.py
scis2026/: README.md  k_anonymization  scis2026_1_create_sample.ipynb  scis2026_2_evaluate.ipynb  scis2026_3_plots.ipynb
src/k_anonymization/: __init__.py
(+80 files in other folders)
