[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "k_anonymization"
authors = [{ name = "SDC4Society", email = "sdc4society@grp.ism.ac.jp" }]
description = "My package description"
# readme = "README.rst"
requires-python = ">=3.12"
# keywords = ["one", "two"]
# license = "BSD-3-Clause"
# classifiers = [
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "scikit-learn",
    "xgboost",
    "itables==2.5.2",
    "ipywidgets",
    "graphviz",
]
dynamic = ["version"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
